--- a/src/dev/spotiguess/src/Resources/Shared.css
+++ b/src/dev/spotiguess/src/Resources/Shared.css
@@ -26,3 +26,14 @@ body {
 .shadow{
     box-shadow: 0px 2px 20px 1px #000000;
 }
+
+.toplevel{
+    display: flex;
+    flex-direction: column;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
