--- a/src/dev/spotiguess/src/Resources/Shared.css
+++ b/src/dev/spotiguess/src/Resources/Shared.css
@@ -27,6 +27,10 @@ body {
     box-shadow: 0px 2px 20px 1px #000000;
 }
 
+.slightshadow{
+    box-shadow: 0px 2px 10px 1px #000000;
+}
+
 .toplevel{
     display: flex;
     flex-direction: column;
