--- a/src/dev/spotiguess/src/Resources/Shared.css
+++ b/src/dev/spotiguess/src/Resources/Shared.css
@@ -23,6 +23,10 @@ body {
     background-color: #1DB954;
 }
 
+.highlight2{
+    background-color: #005107;
+}
+
 .shadow{
     box-shadow: 0px 2px 20px 1px #000000;
 }
