--- a/src/dev/spotiguess/src/Resources/Shared.css
+++ b/src/dev/spotiguess/src/Resources/Shared.css
@@ -27,6 +27,10 @@ body {
     background-color: #005107;
 }
 
+.unready{
+    background-color: #b32400;
+}
+
 .shadow{
     box-shadow: 0px 2px 20px 1px #000000;
 }
