--- a/src/dev/spotiguess/src/components/Game/Game.css
+++ b/src/dev/spotiguess/src/components/Game/Game.css
@@ -48,3 +48,11 @@
 .gamestatus{
     align-items: center;
 }
+
+.leaderboard{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
