--- a/src/dev/spotiguess/src/components/Lobby/Lobby.css
+++ b/src/dev/spotiguess/src/components/Lobby/Lobby.css
@@ -7,6 +7,7 @@
     color: white;
     background-color: #303030;
     border-color: transparent;
+    font-size: large;
 }
 
 /* Chrome, Safari, Edge, Opera */
